--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="dashboard.php"><ion-icon name="home-outline"></ion-icon>Home</a></li>
-                    <li><a href="profile.php"><ion-icon name="person-outline"></ion-icon>Profile</a></li>
-                    <li><a href="category.php"><ion-icon name="grid-outline"></ion-icon>Category</a></li>
-                    <li><a href="report.php"><ion-icon name="document-text-outline"></ion-icon>Report</a></li>
+                    <li><a href="dashboard.html"><ion-icon name="home-outline"></ion-icon>Home</a></li>
+                    <li><a href="profile.html"><ion-icon name="person-outline"></ion-icon>Profile</a></li>
+                    <li><a href="category.html"><ion-icon name="grid-outline"></ion-icon>Category</a></li>
+                    <li><a href="report.html"><ion-icon name="document-text-outline"></ion-icon>Report</a></li>
                     <li><a href="logout.php"><ion-icon name="log-out-outline"></ion-icon>Logout</a></li>
                 </ul>
             </div>
