--- a/category.html
+++ b/category.html
@@ -44,11 +44,11 @@
             <p>Items:</p>
             
             <div class="category-buttons">
-                <button class="cn"><a href="brakeparts.php">Braking System Parts</a></button>
-                <button class="cn"><a href="engineparts.php">Engine Parts</a></button>
-                <button class="cn"><a href="exhaustsystem.php">Exhaust Parts</a></button>
-                <button class="cn"><a href="fuels.php">Fuel Parts</a></button>
-                <button class="cn"><a href="suspension.php">Suspension Parts</a></button>
+                <button class="cn"><a href="brakeparts.html">Braking System Parts</a></button>
+                <button class="cn"><a href="engineparts.html">Engine Parts</a></button>
+                <button class="cn"><a href="exhaustsystem.html">Exhaust Parts</a></button>
+                <button class="cn"><a href="fuels.html">Fuel Parts</a></button>
+                <button class="cn"><a href="suspension.html">Suspension Parts</a></button>
                 <button class="cn"><a href="transmissionandclutch.php">Transmission and Clutch Parts</a></button>
             </div>
 
